--- a/todo/templates/todo/edit_item.html
+++ b/todo/templates/todo/edit_item.html
@@ -6,14 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Add a to do item:</h1>
-    <form method="POST" action="add">
+    <h1>Edit a to do item:</h1>
+    <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
         <div>
             <p>
             <button type="submit">
-                Add Item
+                Update Item
             </button>
             </p>
         </div>
